<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">机动车车辆检验系统</string>
    <string name="lable_title">外检人员登录</string>
    <string name="lable_name">用户名</string>
    <string name="lable_pass">密     码</string>
    <string name="btu_title_login">登录系统</string>
    <string name="prompt">提示</string>
    <string name="prompt_ok">是</string>
    <string name="prompt_cancel">否</string>
    <string name="btu_title_cancel">退出系统</string>
    <string name="sys_msg1">系统配置文件不存在，请联系管理员</string>
    <string name="sys_msg2">系统配置读取异常，请联系管理员</string>
    <string name="selcectCar">车辆列表信息:</string>
    <string name="textxtgl">系 统 管 理</string>
    <string name="longin">登 录</string>
    <string name="exit">关 闭</string>
    <string name="sysin"> 设     置     参    数</string>
    <string name="bbh">版本号：</string>
    <string name="back">返 回</string>
    <string name="shuaxing">刷 新</string>
    <!-- 主菜單 -->
    <string name="gnxz">功 能 选 择</string>
    <string name="ddlb">待 登 列 表</string>
    <string name="carlogin">车 辆 登 陆</string>
    <string name="pgwj">人 工 外 检</string>
    <string name="wjphone">外 检 拍 照</string>
    <string name="dongtaidip">动 态 底 盘</string>
    <string name="dpjianyan">底 盘 检 验</string>
    <string name="phonebp">照 片 补 拍</string>
    <string name="carls">车 辆 路 试</string>
    <string name="carcy">车 辆 查 验</string>
    <string name="cartb">车 辆 退 办</string>
    <string name="forcerecheck">强 制 重 检</string>
    <string name="ggbdui">公 告 比 对</string>
    <string name="exitss">注 销 系 统</string>
    <string name="btu_paizhao">外观拍照</string>
    <string name="btu_waijian">外检项目</string>
    <string name="btu_zdy">先外检车辆</string>
    <string name="btu_seach">查询</string>
    <string name="btu_seach_all">查看全部</string>
    <string name="car_cllx_name">类型:</string>
    <string name="car_lsh">流水号</string>
    <string name="car_vin_name">车辆识别代码:</string>
    <string name="car_hphm_name">号牌号码:</string>
    <string name="btu_tri">拍照</string>
    <string name="btu_fq">扔掉重拍</string>
    <string name="btu_upfile">上传图片</string>
    <string name="btu_zdy_qr">添加车辆</string>
    <string name="btu_zdy_qr_xc">确定添加</string>
    <string name="btu_zdy_qx">取消</string>
    <string name="txt_zdy_hphm">号牌号码:</string>
    <string name="txt_zdy_cllx">车辆类型:</string>
    <string name="txt_zdy_hplx">号牌种类:</string>
    <string name="Title_zdy">自定义车辆</string>
    <string name="btu_zdy_xc">新车</string>
    <string name="btu_zdy_jiuche">在用车</string>
    <string name="txt_zdy_vin">车辆识别代号:</string>
    <string name="car_pz_upstate">完成拍照</string>
    <string name="car_pp_hg">合格</string>
    <string name="car_pp_bgh">不合格</string>
    <string name="car_pp_jywh">建议维护</string>
    <string name="car_wgpz">外观拍照</string>
    <string name="car_people_jc">人工检测</string>
    <string name="car_people_jyjl">检验结论:</string>
    <string name="dengdai_msg">数据加载中...</string>
    <string name="photo_title">外观拍照项目列表:</string>
    <string name="people_title">人工检验项目列表:</string>
    <string name="people_xm_title">人工检验项目类别列表:</string>
    <string name="zp_name">照片名称：</string>
    <string name="zp_vin">VIN码照片</string>
    <string name="camera_name">外检拍照—车辆拍照页</string>
    <string name="zp_ylq">预  览  区</string>
    <string name="zp_sg">闪  ×</string>
    <string name="zp_pz">拍  照</string>
    <string name="zp_wc">完  成</string>
    <string name="zp_qx">取  消</string>
    <string name="main_carlogin">车辆登录</string>
    <string name="main_wjpz">外检拍照</string>
    <string name="main_zxxt">注销系统</string>
    <string name="car_login_qr">确认登录</string>
    <string name="car_login_qx">取消登录</string>
    <string name="passUpdata">密码修改</string>
    <string name="up_pass_qr">确认修改</string>
    <string name="up_pass_qx">取消修改</string>
    <string name="btu_up_pass">密码修改</string>
    <string name="inspection_item_hg">合格</string>
    <string name="inspection_item_bhg">不合格</string>
    <string name="inspection_item_hgjywh">建议维护</string>
    <string name="inspection_submit_jyjl">提交检验结论</string>
    <string name="nullDataList">没有数据可以显示！</string>
    <!-- 错误日志提示 -->
    <string name="error_begin">错误日志开始</string>
    <string name="NET_ERROR">网络异常，请检查网络！</string>
    <string name="REQUEST_DATA_ERROR">请求数据错误，请检查数据！</string>
    <string name="SYSTEM_WORKING_ERROR">数据处理中，请稍等！</string>
    <string name="REQUEST_OUTTIME_ERROR">请求超时超时！</string>
    <string name="RUNTIMEEXCEPTION_ERROR">数据请求失败，请重试！</string>
    <string name="GETXML_ERROR">获取数据失败，请重试！</string>
    <string name="GETXML_SCCEND">数据提交上传成功！</string>
    <string name="GETXMLDATA_ERROR">获取数据错误！</string>
    <string name="error_end">错误日志结束</string>
    <!-- 提示标题 -->
    <string name="ERROR_TITLE">错误提示：</string>
    <string name="FORMAT_TITLE">格式错误：</string>
    <string name="SYS_TITLE">系统提示：</string>
    <string name="WARM_TITLE">警告提示：</string>
    <!-- 车辆违章提示 -->
    <string name="ILLEGAL_TITLE">车辆违章提示：</string>
    <string name="NO_ILLEGAL_MESSAGE">无违法信息！</string>
    <string name="weidaojiancheshijian">无违法信息！\n此车未到检车的有效期</string>
    <string name="YES_SEALED_MESSAGE">已查封！</string>
    <string name="YES_ILLEGAL_UNTREATED_MESSAGE">违法未处理！</string>
    <string name="YES_ILLEGAL_UNTREATED_MESSAGEDATA">违法未处理！\n此车未到检车的有效期</string>
    <string name="YES_ACCIDENT_UNTREATED_MESSAGE">事故未处理！</string>
    <string name="YES_ACCIDENT_UNTREATED_MESSAGEdata">事故未处理！\n此车未到检车的有效期</string>
    <string name="XIANNICAR_MESSAGE">嫌疑车！</string>
    <string name="XIANNICAR_MESSAGEDATA">嫌疑车！\n此车未到检车的有效期</string>
    <string name="LOCK_MESSAGE">已锁定！</string>
    <string name="LOCK_MESSAGEdata">已锁定！\n此车未到检车的有效期</string>
    <string name="ACCIDENT_ESCAPE_MESSAGE">事故逃逸车！</string>
    <string name="ACCIDENT_ESCAPE_MESSAGEDATA">事故逃逸车！\n此车未到检车的有效期</string>
    <string name="STOLEN_MESSAGE">有被盗抢嫌疑！</string>
    <string name="STOLEN_MESSAGEDATA">有被盗抢嫌疑！\n此车未到检车的有效期</string>
    <!-- 请求提示 -->
    <string name="serviceerrpr">服务器返回数据格式错误</string>
    <string name="USER_LOGIN">正在登录，请稍等、、、、</string>
    <string name="USER_LOGOUT">正在注销，请稍等、、、、</string>
    <string name="DEFAUT_REQUEST_MESSAGE">正在处理，请稍等、、、、</string>
    <string name="QUERY_CAR_BASICINFO">正在查询车辆信息，请稍等、、、、</string>
    <string name="QUERY_CAR_GGINFO">正在查询车辆整车公告信息，请稍等、、、、</string>
    <string name="QUERY_CAR_DPGGINFO">正在查询车辆底盘公告信息，请稍等、、、、</string>
    <string name="QUERY_CAR_GGZPINFO">正在查询车辆公告照片，请稍等、、、、</string>
    <string name="REQUEST_PZXM_MESSAGE_ID">正在查询拍照项目，请稍等、、、、</string>
    <string name="REQUEST_PZZT_MESSAGE_ID">正在查询照片状态，请稍等、、、、</string>
    <string name="REQUEST_DZJP_MESSAGE_ID">正在查询车辆登记照片，请稍等、、、、</string>
    <string name="REQUEST_VEHLIST_MESSAGE_ID">正在查询车辆，请稍等、、、、</string>
    <string name="REQUEST_WJJYXM_MESSAGE_ID">正在查询外观检验项目，请稍等、、、、</string>
    <string name="REQUEST_UPDATE_PASSWORD_ID">正在修改密码，请稍等、、、、</string>
    <string name="REQUEST_DeleteVeh_MESSAGE_ID">正在删除车辆，请稍等、、、、</string>
    <string name="REQUEST_UpVeh_MESSAGE_ID">正在更新车辆，请稍等、、、、</string>
    <string name="REQUEST_SUBJYXM_MESSAGE_ID">正在提交外检数据，请稍等、、、、</string>
    <string name="REQUEST_SUBCHAYAN_MESSAGE_ID">正在提交查验数据，请稍等、、、、</string>
    <string name="REQUEST_DPJYXM_MESSAGE_ID">正在查询底盘检验项目，请稍等、、、、</string>
    <string name="REQUEST_DTDPJYXM_MESSAGE_ID">正在查询动态底盘检验项目，请稍等、、、、</string>
    <string name="REQUEST_CYXM_MESSAGE_ID">正在查询查验项目，请稍等、、、、</string>
    <string name="GETDATA_ERROR">当前没有可检测的车辆!</string>
    <string name="REQUEST_IP_MESSAGE_ID">初始化系统，请稍等、、、、</string>
    <string name="SUBMITPHOTO_MESSAGE">正在上传照片，请稍等、、、、</string>
    <string name="CAR_LOGIN">车辆正在登录，请稍等、、、、</string>
    <string name="SETWCPZ_REQUEST_MESSAGE">正在设置完成拍照，请稍后、、</string>
    <string name="QUERY_BP_CAR_LIST">正在查询车辆信息，请稍后、、</string>
    <string name="BEGIN_MESSAGE">开始项目，请稍后、、</string>
    <string name="BEGIN_MESSAGE_KSLX">开始录像，请稍后、、</string>
    <string name="BEGIN_MESSAGE_JSLX">结束录像，请稍后、、</string>
    <string name="BEGIN_MESSAGE_XCZDKSZP">行车制动开始抓怕，请稍后、、</string>
    <string name="BEGIN_MESSAGE_DTDPKSZP">动态地盘开始抓怕，请稍后、、</string>
    <string name="BEGIN_MESSAGE_DTDPJSZP">动态地盘结束抓怕，请稍后、、</string>
    <string name="BEGIN_MESSAGE_DPKSZP">地盘开始抓怕，请稍后、、</string>
    <string name="BEGIN_MESSAGE_DPJSZP">地盘结束抓怕，请稍后、、</string>
    <string name="BEGIN_MESSAGE_XCZDJSZP">行车制动结束抓拍，请稍后、、</string>
    <string name="BEGIN_MESSAGE_PDZCZDZP">坡道驻车制动抓拍，请稍后、、</string>
    <string name="END_MESSAGE">项目结束，请稍后、、</string>
    <string name="TIME_MATHCH_SERVICE_TO_NOW">获取服务器时间，请稍后、、</string>
    <string name="DELETE_CAR_INFO">车辆退办中，请稍后、、</string>
    <string name="FORCERECLECK_CAR_INFO">重检提交中，请稍后、、</string>
    

    <!-- 正确日志提示 -->
    <string name="right_begin">错误日志开始</string>
    <string name="REQUEST_DATA_RIGHT">请求数据正确！</string>
    <string name="right_end">错误日志结束</string>
    <string name="CAR_LOGIN_XXBG">提交变更信息，请稍后！</string>
    <!-- 提示消息： -->
    <string name="NAMEORPASSWORD_ERROR">用户名或密码格式错误，请修正!</string>
    <string name="INPUT_HPHM">请输入 车牌号码，请修正!</string>
    <string name="INPUT_VIN">请输入 VIN码，请修正!</string>
    <string name="INIT_ERROR">初始化异常，请重试!</string>
    <string name="LOGOUT_SUCCESS">注销成功!</string>
    <string name="PLEASE_TAKE_ALL_PHOTOS">请完成照片拍摄并设置完成拍照!</string>
    <string name="NOTGETPZXM">无检测数据，点击确定将进入车辆列表界面!</string>
    <string name="FINISH_TAKE_BASICPHOTO">当前拍照项完成，是否自定义拍照项目!</string>
    <string name="FINISH_TAKE_BASICTAKEPHOTO">基础拍照项完成，是否自定义拍照项目!</string>
    <string name="NOFINISH_TAKE_BASICTAKEPHOTO">请完成基础照片的拍摄！</string>
    <string name="NOTFINISH_TAKE_BASICPHOTO">请完成当前照片的拍摄！</string>
    <string name="FINISH_TAKE_PHOTO_ISSETWCPZ">是否设置完成拍照？</string>
    <string name="GOOUT_TAKE_PHOTO">是否退出拍照功能？</string>
    <string name="SET_WCPZ_SUCCESS">设置成功!</string>
    <string name="SET_WCPZ_EXCEPTION">设置失败，请重试!</string>
    <string name="INPUT_VIN_AND_HAPM">请输入号牌号码和VIN后四位!</string>
    <string name="INPUT_JYY_AND_JYYSFZH">请输入检验员名称和身份证号嘛!</string>
    <string name="QUERY_CAR_LTGG">查询轮胎规格型号!</string>

    <color name="radioText">#5990c7</color>
    <color name="nullDataListColor">#0000ff</color>

    <string name="qymc">企业名称：</string>
    <string name="zwpq">中文品牌：</string>
    <string name="clmc">车辆名称：</string>
    <string name="bianhao">编号：</string>
    <string name="clxh">车辆型号：</string>
    <string name="clpc">公告批次：</string>
    <string name="tzxsrq">停止销售日期：</string>
    <string name="gbfbrq">公布发布日期：</string>
    <string name="title_activity_ggxx">GGXXActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ggxx__list">GGXX_ListActivity</string>
    <string name="title_activity_ggdetail">GGDetailActivity</string>
    <string name="title_activity_ggxx__tab">GGXX_TabActivity</string>
    <string name="title_activity_gg_photo">GG_photoActivity</string>

</resources>