<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/car_list_msg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_repeat"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/hphmtv"
            style="@style/inspection_text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/car_hphm_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/hphmet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/hpzltv"
            style="@style/inspection_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_zdy_hplx"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/hpzls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/btu_break"
            style="@style/inspection_value"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/login_initial_setup_pree"
           android:text="@string/back" />

        <Button
            android:id="@+id/btu_seach"
            style="@style/inspection_value"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2.5"
            android:background="@drawable/login_initial_setup_pree"
            android:text="@string/btu_seach" />

        <Button
            android:id="@+id/btu_seach_all"
            style="@style/inspection_value"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@drawable/login_initial_setup_pree"
            android:text="@string/shuaxing" />
    </LinearLayout>
    <!-- 没有数据时显示的文本 -->

    <TextView
        android:id="@+id/nullDataList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/nullDataList"
        android:textColor="@color/nullDataListColor"
        android:textSize="20dp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/car_list_progressBar_dengdai_carList"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dengdai_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dengdai_msg"
        android:visibility="gone" />

    <ListView
        android:id="@+id/cl_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_carlogin_itembar"
        android:cacheColorHint="#00000000"
        android:scrollbars="@null"
        android:visibility="gone" />

</LinearLayout>